# splineslicer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: skeletonize_workflow.py  workflow_test.ipynb
splineslicer/: __init__.py  _dock_widget.py  _reader.py
splineslicer/_tests/: test_dock_widget.py  test_function.py
splineslicer/io/: ilastik.py  spline.py
splineslicer/measure/: _qt_measure.py  align_slices.py  measure_boundaries.py
splineslicer/skeleton/: _qt_skeleton_pruner.py  _qt_skeletonize.py  binarize.py  skeleton_pruner.py  skeletonize.py
splineslicer/slice/: slice.py  slice_utils.py
splineslicer/spline/: spline_utils.py
splineslicer/view/: results_viewer.py  results_viewer_utils.py
src/splineslicer/: __init__.py  _dock_widget.py  _reader.py  _version.py  napari.yaml
src/splineslicer/_tests/: test_reader.py
src/splineslicer/correction/: _qt_correct.py
src/splineslicer/io/: hdf5.py  ilastik.py
src/splineslicer/measure/: _qt_measure.py  measure_boundaries.py
src/splineslicer/rotate/: _qt_rotator.py  rotations_utils.py
src/splineslicer/skeleton/: _qt_skeletonize.py  binarize.py  skeleton_pruner.py  skeleton_utils.py  skeletonize.py
src/splineslicer/slice/: slice.py
src/splineslicer/spline/: spline_utils.py
src/splineslicer/sub_slicing/: _qt_sub_slice.py  slicer_utils.py
src/splineslicer/view/: results_viewer.py
tests/: test_widget.py
