[metadata]
name = splineslicer

author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3-Clause
url = https://github.com/kevinyamauchi/splineslicer
description = A python package for slicing nD images along splines.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/splineslicer/issues
    Documentation = https://github.com/kevinyamauchi/splineslicer#README.md
    Source Code = https://github.com/kevinyamauchi/splineslicer
    User Support = https://github.com/kevinyamauchi/splineslicer/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    geomdl
    h5py
    napari-plugin-engine>=0.1.4
    numpy
    pyqtgraph
    skan


[options.entry_points] 
napari.plugin = 
    splineslicer = splineslicer
